[gd_scene load_steps=10 format=3 uid="uid://x8t7cxfhviko"]

[ext_resource type="Script" uid="uid://ctvwjllbiqhh1" path="res://editor/ui/ks_editor/edit_control.gd" id="1_bxnau"]
[ext_resource type="PackedScene" uid="uid://djq23ftlfwkn1" path="res://editor/ui/main_editor/dock/dock.tscn" id="1_cfuhs"]
[ext_resource type="Script" uid="uid://uw6s0ovn0vi1" path="res://editor/ui/ks_editor/shot_data_edit.gd" id="1_fqhf8"]
[ext_resource type="Script" uid="uid://c2anqfrl1qe27" path="res://editor/ui/ks_editor/ks_editor.gd" id="1_qu5wb"]
[ext_resource type="Script" uid="uid://b6leecqikvwpe" path="res://editor/ui/ks_editor/button_rename.gd" id="2_ggagf"]
[ext_resource type="Script" uid="uid://byqad5mu76fj5" path="res://addons/konado/theme_system/code_edit.gd" id="3_43nnm"]
[ext_resource type="Script" uid="uid://brfpi4t4c2ui3" path="res://editor/ui/ks_editor/staff_window.gd" id="5_bxnau"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggagf"]
bg_color = Color(0.0846, 0.0873, 0.09, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_px02i"]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.25826, 0.457502, 0.704714, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="shot_edit_dock" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WindowPanel"

[node name="shot_data_edit" type="Node" parent="."]
script = ExtResource("1_fqhf8")

[node name="edit_control" type="Node" parent="."]
script = ExtResource("1_bxnau")

[node name="ks_editor" type="Node" parent="."]
script = ExtResource("1_qu5wb")

[node name="dock" parent="." instance=ExtResource("1_cfuhs")]
layout_mode = 1
dock_name = "镜头编辑"

[node name="BoxContainer" type="BoxContainer" parent="dock"]
layout_mode = 2

[node name="Button" type="Button" parent="dock/BoxContainer"]
layout_mode = 2
text = "打开"

[node name="BoxContainer2" type="BoxContainer" parent="dock/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="弹出" type="Button" parent="dock/BoxContainer/BoxContainer2"]
layout_mode = 2
text = "打开"

[node name="弹出2" type="Button" parent="dock/BoxContainer/BoxContainer2"]
layout_mode = 2
text = "打开"

[node name="弹出3" type="Button" parent="dock/BoxContainer/BoxContainer2"]
layout_mode = 2
text = "弹出窗口"

[node name="VBoxContainer2" type="SplitContainer" parent="dock"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="dock/VBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ggagf")

[node name="ScrollContainer" type="ScrollContainer" parent="dock/VBoxContainer2/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="BoxContainer" parent="dock/VBoxContainer2/Panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
vertical = true
script = ExtResource("2_ggagf")

[node name="镜头" type="Label" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "镜头"
horizontal_alignment = 1

[node name="镜头跳转" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "jump <目标镜头id>"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "镜头跳转"

[node name="标记" type="Label" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "标记"
horizontal_alignment = 1

[node name="注释" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "##"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "注释"

[node name="开始标记" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "开始标记"

[node name="背景" type="Label" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "背景"
horizontal_alignment = 1

[node name="背景切换" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "background <背景图片名称> [效果类型]"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "背景切换"

[node name="背景效果" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "背景效果"

[node name="角色" type="Label" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "角色"
horizontal_alignment = 1

[node name="角色显示" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "actor show <角色名称> <角色状态> at <x坐标> <y坐标> scale <缩放比例> [mirror]"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "角色显示"

[node name="角色退出" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "actor exit <角色名称>"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "角色退出"

[node name="音频" type="Label" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "音频"
horizontal_alignment = 1

[node name="播放bgm" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "play bgm <BGM名称>"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "播放bgm"

[node name="对话内容" type="Label" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "对话内容"
horizontal_alignment = 1

[node name="插入对话" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "\"角色ID\" \"对话内容\" [语音ID]"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "插入对话"

[node name="选项分支" type="Label" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "选项分支"
horizontal_alignment = 1

[node name="分支标签" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "branch <分支标签名称>
    缩进的内容行"
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "分支标签"

[node name="选项分支2" type="Button" parent="dock/VBoxContainer2/Panel/ScrollContainer/ButtonContainer"]
unique_name_in_owner = true
editor_description = "choice \"选项文本1\" <跳转标签1> \"选项文本2\" <跳转标签2> ..."
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_type_variation = &"KSButton"
text = "选项分支"

[node name="StatementTree" type="Tree" parent="dock/VBoxContainer2/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/relationship_line_color = Color(0, 0, 0, 0)
theme_override_colors/guide_color = Color(0, 0, 0, 0)
hide_root = true

[node name="editor" type="MarginContainer" parent="dock/VBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="BoxContainer" type="BoxContainer" parent="dock/VBoxContainer2/editor"]
layout_mode = 2
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="dock/VBoxContainer2/editor/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="dock/VBoxContainer2/editor/BoxContainer/BoxContainer"]
layout_mode = 2
text = "镜头ID"

[node name="shot_id2" type="LineEdit" parent="dock/VBoxContainer2/editor/BoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "镜头ID"

[node name="Label2" type="Label" parent="dock/VBoxContainer2/editor/BoxContainer/BoxContainer"]
layout_mode = 2
text = "出场演员"

[node name="ScrollContainer" type="ScrollContainer" parent="dock/VBoxContainer2/editor/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="dock/VBoxContainer2/editor/BoxContainer/BoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterLabel" type="Label" parent="dock/VBoxContainer2/editor/BoxContainer/BoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_px02i")
text = "角色 A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_act" type="Button" parent="dock/VBoxContainer2/editor/BoxContainer/BoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
text = "十"

[node name="CodeEdit" type="CodeEdit" parent="dock/VBoxContainer2/editor/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "输入文本"
deselect_on_focus_loss_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
highlight_all_occurrences = true
highlight_current_line = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
indent_use_spaces = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("3_43nnm")

[node name="MarginContainer" type="MarginContainer" parent="dock"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="WordCount" type="Label" parent="dock/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.443137)
layout_mode = 2
size_flags_horizontal = 8
text = "统计"

[node name="staff_window" type="Window" parent="." groups=["Window"]]
unique_name_in_owner = true
editor_description = "文本节点的高级编辑器"
title = "演员表"
initial_position = 1
size = Vector2i(800, 500)
transient = true
exclusive = true
min_size = Vector2i(800, 500)
max_size = Vector2i(3840, 2160)
script = ExtResource("5_bxnau")

[node name="Panel" type="Panel" parent="staff_window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WindowPanel"

[node name="CharacterLabel" type="Label" parent="staff_window"]
offset_left = 143.0
offset_top = 46.0
offset_right = 246.0
offset_bottom = 89.0
text = "演员名"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterLabel2" type="Label" parent="staff_window"]
offset_left = 426.0
offset_top = 46.0
offset_right = 529.0
offset_bottom = 89.0
text = "角色 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="add_act" type="Button" parent="staff_window"]
anchors_preset = -1
anchor_left = 2.4466
anchor_right = 2.5016
anchor_bottom = 0.076
offset_left = -1279.28
offset_top = 46.0
offset_right = -1279.28
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
text = "十"
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="staff_window"]
offset_left = 100.0
offset_top = 114.0
offset_right = 727.0
offset_bottom = 454.0

[node name="StaffContainer" type="BoxContainer" parent="staff_window/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[connection signal="focus_exited" from="dock/VBoxContainer2/editor/BoxContainer/BoxContainer/shot_id2" to="staff_window" method="_on_title_focus_exited"]
[connection signal="text_submitted" from="dock/VBoxContainer2/editor/BoxContainer/BoxContainer/shot_id2" to="staff_window" method="_on_title_text_submitted"]
[connection signal="pressed" from="dock/VBoxContainer2/editor/BoxContainer/BoxContainer/ScrollContainer/BoxContainer/add_act" to="edit_control" method="_on_add_act_pressed"]
[connection signal="text_changed" from="dock/VBoxContainer2/editor/BoxContainer/CodeEdit" to="staff_window" method="_on_text_edit_text_changed"]
[connection signal="close_requested" from="staff_window" to="staff_window" method="_on_close_requested"]
[connection signal="pressed" from="staff_window/add_act" to="staff_window" method="_on_add_act_pressed"]
